--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 /* Reset css */
-* , body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 html {
-    font-family: Arial, Helvetica, sans-serif;
-    
+  font-family: Arial, Helvetica, sans-serif;
 }
 /* 
 1. Vị trí 
@@ -16,218 +16,263 @@ html {
 */
 
 .clear {
-    clear: both;
+  clear: both;
 }
 
 .text-white {
-    color: #fff !important;
+  color: #fff !important;
 }
 
 #main {
-    
-   
 }
-
 
 #header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 46px;
-    background-color: #000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 46px;
+  background-color: #000;
 }
 
-#nav , .subnav {
-    /* Bỏ dấu chấm của li */
-    list-style-type: none;
+#nav,
+.subnav {
+  /* Bỏ dấu chấm của li */
+  list-style-type: none;
 }
 
 #nav {
-    display: inline;
+  display: inline;
 }
 
 #nav > li {
-    /* Set navigation nằm trên 1 dòng */
-    display: inline-block;
+  /* Set navigation nằm trên 1 dòng */
+  display: inline-block;
 }
 
 #nav li {
-    position: relative;
+  position: relative;
 }
 
 #nav > li > a {
-    color: #fff;
-    /* Viết hoa */
-    text-transform: uppercase;
+  color: #fff;
+  /* Viết hoa */
+  text-transform: uppercase;
 }
 
 #nav li a {
-    
-    /* Loại bỏ gạch chân */
-    text-decoration: none;     
-    /* Căn giữa khối */
-    line-height: 46px;
-    /* Khoảng cách giữa các khối li */
-    padding: 0 24px;
-    display: block;
+  /* Loại bỏ gạch chân */
+  text-decoration: none;
+  /* Căn giữa khối */
+  line-height: 46px;
+  /* Khoảng cách giữa các khối li */
+  padding: 0 24px;
+  display: block;
 }
 
 #nav > li:hover .subnav {
-    display: block;
+  display: block;
 }
 
 #nav > li:hover > a {
-    color: #000;
-    background-color: #ccc;
+  color: #000;
+  background-color: #ccc;
 }
 #nav .subnav li:hover {
-    color: #000;
-    background-color: #ccc;
+  color: #000;
+  background-color: #ccc;
 }
 
 #nav .subnav {
-    /* Ẩn menu cấp 2  */
-    display: none;
-    top: 100%;
-    left: 0;
-    min-width: 160px;
-    position: absolute;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0 0 0 0.3);
+  /* Ẩn menu cấp 2  */
+  display: none;
+  top: 100%;
+  left: 0;
+  min-width: 160px;
+  position: absolute;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0 0 0 0.3);
 }
 
 #nav .subnav a {
-    color: #000;
-    padding: 0 16px;
-    line-height: 38px;
+  color: #000;
+  padding: 0 16px;
+  line-height: 38px;
 }
 
 #nav .nav-arrow-down {
-    font-size: 11px;
+  font-size: 11px;
 }
 
 #header .search-btn {
-    float: right;
+  float: right;
 }
 
 #header .search-btn:hover {
-    background-color: #f44336 ;
-    /* Thay đổi hình dạng của trỏ chuột */
-    cursor: pointer;
+  background-color: #f44336;
+  /* Thay đổi hình dạng của trỏ chuột */
+  cursor: pointer;
 }
 
 #header .search-icon {
-    color: #fff;
-    font-size: 20px;
-    line-height: 46px;
-    padding: 0 21px;
+  color: #fff;
+  font-size: 20px;
+  line-height: 46px;
+  padding: 0 21px;
 }
 
 #slider {
-    margin-top: 46px;
-    padding-top: 50%;
-    background: url('/assets/img/slider1/chicago.jpg') top center / cover no-repeat;
+  margin-top: 46px;
+  padding-top: 50%;
+  background: url("/assets/img/slider1/chicago.jpg") top center / cover
+    no-repeat;
 }
 
 #content {
-
 }
 
 #content .content-section {
-    width: 800px;
-    margin: 64px;
+  width: 800px;
+  margin: 64px;
 }
 
 #content .section-heading {
-    font-size: 30px;
-    font-weight: 500;
-    /* Căn giữa chữ THE BAND */
-    text-align: center;
-    letter-spacing: 4px;
+  font-size: 30px;
+  font-weight: 500;
+  /* Căn giữa chữ THE BAND */
+  text-align: center;
+  letter-spacing: 4px;
 }
 
 #content .section-sub-heading {
-    font-size: 15px;
-    text-align: center;
-    margin-top: 25px;
-    /* Chữ nghiêng */
-    font-style: italic;
-    /* Độ trong suốt 60% */
-    opacity: 0.6;
+  font-size: 15px;
+  text-align: center;
+  margin-top: 25px;
+  /* Chữ nghiêng */
+  font-style: italic;
+  /* Độ trong suốt 60% */
+  opacity: 0.6;
 }
 
 #content .about-text {
-    font-size: 15px;
-    margin-top: 25px;
-    /* Căn lề 2 bên */
-    text-align: justify;
-    /* Khoảng cách giữa các dòng */
-    line-height: 1.4;
+  font-size: 15px;
+  margin-top: 25px;
+  /* Căn lề 2 bên */
+  text-align: justify;
+  /* Khoảng cách giữa các dòng */
+  line-height: 1.4;
 }
 
 #content .menbers-item {
-    /* Xét ngang cho 3 ảnh */
-    float: left;
-    width: calc(100% / 3);
-    text-align: center;
+  /* Xét ngang cho 3 ảnh */
+  float: left;
+  width: calc(100% / 3);
+  text-align: center;
 }
 
 #content .menbers-name {
-    font-size: 15px;
-    
+  font-size: 15px;
 }
 
 #content .menbers-img {
-    margin-top: 15px;
-    width: 154px;
-    /* Bo tròn viền ảnh */
-    border-radius: 4px;
+  margin-top: 15px;
+  width: 154px;
+  /* Bo tròn viền ảnh */
+  border-radius: 4px;
 }
 
 #content .menbers-list {
-    margin-top: 48px;
+  margin-top: 48px;
 }
-
 
 /* Tour section */
 #content .tour-section {
-    background-color: #000;
-    height: 850px;
+  background-color: #000;
+  height: 850px;
 }
 
 .ticket-list {
-    background-color: #fff;
-    list-style: none;
-    margin-top: 40px;
+  background-color: #fff;
+  list-style: none;
+  margin-top: 40px;
 }
 
 .ticket-list li {
-    font-size: 15px;
-    padding: 11px 16px;
-    border-bottom: 1px solid #ccc;
+  font-size: 15px;
+  padding: 11px 16px;
+  border-bottom: 1px solid #ccc;
 }
 
-.ticket-list .Sold-out {    
-    background-color: #f44336;
-    color: #fff;
-    padding: 3px 4px;
-    margin-left: 16px;
+.ticket-list .Sold-out {
+  background-color: #f44336;
+  color: #fff;
+  padding: 3px 4px;
+  margin-left: 16px;
 }
 
 .ticket-list .quantity {
-    background-color: #000;
+  background-color: #000;
+  color: #fff;
+  float: right;
+  width: 24px;
+  height: 24px;
+  text-align: center;
+  border-radius: 50%;
+  line-height: 24px;
+  padding: -3px;
+}
+
+/* Place */
+.place-list {
+  margin: 32px -8px 0;
+}
+
+.place-item {
+  float: left;
+  width: calc(100% / 3);
+  padding: 0 8px;
+}
+
+.place-img {
+  width: 100%;
+  display: block;
+}
+
+.place-img:hover {
+  opacity: 0.6;
+}
+
+.place-body {
+  background-color: #fff;
+  padding: 16px;
+  font-size: 15px;
+}
+
+.place-heading {
+  font-size: 15px;
+  font: 600;
+}
+
+.place-time {
+  margin-top: 15px;
+  color: #757575;
+  margin-bottom: 15px;
+}
+
+.place desc {
+  margin-top: 15px;
+  line-height: 1.4;
+}
+
+.place-buy-btn {
     color: #fff;
-    float: right;
-    width: 24px;
-    height: 24px;
-    text-align: center;
-    border-radius: 50%;
-    line-height: 24px;
-    padding: -3px;
+    background-color: #000;
+    text-decoration: none;
+    padding: 11px 16px;
+    display: inline-block;
+    margin-top: 15px;
 }
 
 /* Footer section */
 #footer {
-
 }
