--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 /* Reset css */
-*,
-body {
+* {
   margin: 0;
   padding: 0;
+  /* tự động tính toán cho bằng kích thước cho ban đầu */
   box-sizing: border-box;
 }
 html {
+  scroll-behavior: smooth;
   font-family: Arial, Helvetica, sans-serif;
 }
 /* 
@@ -15,6 +16,36 @@ html {
 4. Kiểu dáng (Kiểu chữ , hình tròn , vuông , ...)
 */
 
+/* Common */
+.row {
+  margin-left: -8px;
+  margin-right: -8px;
+}
+
+.row::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.col {
+  float: left;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.col-third {
+  width: 33.33333%
+}
+
+.col-half {
+  width: 50%;
+}
+
+.col-full {
+  width: 100%;
+}
+
 .clear {
   clear: both;
 }
@@ -23,6 +54,39 @@ html {
   color: #fff !important;
 }
 
+.text-center {
+  text-align: center !important ;
+}
+
+.mt-8 {
+  margin-top: 8px !important ;
+}
+
+.mt-16 {
+  margin-top: 16px !important ;
+}
+
+.pull-right {
+  float: right !important;
+}
+
+.btn {
+  color: #fff;
+  background-color: #000;
+  text-decoration: none;
+  padding: 11px 16px;
+  display: inline-block;
+  margin-top: 15px;
+  border: none;
+}
+
+.btn:hover {
+color: #000;
+background-color: #ccc;
+cursor: pointer;
+}
+
+/* Main */
 #main {
 }
 
@@ -33,20 +97,18 @@ html {
   right: 0;
   height: 46px;
   background-color: #000;
-}
-
-#nav,
-.subnav {
-  /* Bỏ dấu chấm của li */
-  list-style-type: none;
+  z-index: 1;
 }
 
 #nav {
-  display: inline;
+  display: inline-block;
+}
+
+#nav , .subnav {
+  list-style-type: none;
 }
 
 #nav > li {
-  /* Set navigation nằm trên 1 dòng */
   display: inline-block;
 }
 
@@ -56,90 +118,102 @@ html {
 
 #nav > li > a {
   color: #fff;
-  /* Viết hoa */
   text-transform: uppercase;
 }
 
 #nav li a {
-  /* Loại bỏ gạch chân */
   text-decoration: none;
-  /* Căn giữa khối */
   line-height: 46px;
-  /* Khoảng cách giữa các khối li */
   padding: 0 24px;
   display: block;
 }
 
-#nav > li:hover .subnav {
+#nav li:hover .subnav {
   display: block;
 }
 
+#nav .subnav li:hover a ,
 #nav > li:hover > a {
-  color: #000;
-  background-color: #ccc;
-}
-#nav .subnav li:hover {
   color: #000;
   background-color: #ccc;
 }
 
 #nav .subnav {
-  /* Ẩn menu cấp 2  */
   display: none;
+  min-width: 160px;
   top: 100%;
   left: 0;
-  min-width: 160px;
   position: absolute;
   background-color: #fff;
-  box-shadow: 0 0 10px rgba(0 0 0 0.3);
+  box-shadow: 0 0 10px rgba(0 , 0 , 0 , 0.3);
 }
 
 #nav .subnav a {
   color: #000;
-  padding: 0 16px;
+  padding: 0 12px;
   line-height: 38px;
 }
 
 #nav .nav-arrow-down {
-  font-size: 11px;
+  font-size: 14px;
 }
 
 #header .search-btn {
   float: right;
+  padding: 0 21px;
 }
 
 #header .search-btn:hover {
-  background-color: #f44336;
-  /* Thay đổi hình dạng của trỏ chuột */
   cursor: pointer;
+  background-color: #f44336;
 }
 
 #header .search-icon {
   color: #fff;
   font-size: 20px;
   line-height: 46px;
-  padding: 0 21px;
 }
 
+/* slider */
 #slider {
+  position: relative;
   margin-top: 46px;
   padding-top: 50%;
-  background: url("/assets/img/slider1/chicago.jpg") top center / cover
-    no-repeat;
+  background: url("/assets/img/slider1/chicago.jpg") top center / cover no-repeat;
 }
+
+#slider .text-content {
+  position: absolute;
+  bottom: 47px;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+}
+
+#slider .text-heading {
+  font-weight: 500;
+  font-size: 24px;
+}
+
+#slider .text-description {
+  font-size: 15px;
+  margin-top: 25px;
+}
+
 
 #content {
 }
 
 #content .content-section {
   width: 800px;
-  margin: 64px;
+  padding: 64px 0 112px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #content .section-heading {
   font-size: 30px;
   font-weight: 500;
-  /* Căn giữa chữ THE BAND */
   text-align: center;
   letter-spacing: 4px;
 }
@@ -148,9 +222,7 @@ html {
   font-size: 15px;
   text-align: center;
   margin-top: 25px;
-  /* Chữ nghiêng */
   font-style: italic;
-  /* Độ trong suốt 60% */
   opacity: 0.6;
 }
 
@@ -163,11 +235,8 @@ html {
   line-height: 1.4;
 }
 
-#content .menbers-item {
-  /* Xét ngang cho 3 ảnh */
-  float: left;
-  width: calc(100% / 3);
-  text-align: center;
+#content .menbers-list {
+  margin-top: 48px;
 }
 
 #content .menbers-name {
@@ -175,18 +244,14 @@ html {
 }
 
 #content .menbers-img {
-  margin-top: 15px;
   width: 154px;
+  margin-top: 15px;
   /* Bo tròn viền ảnh */
   border-radius: 4px;
 }
 
-#content .menbers-list {
-  margin-top: 48px;
-}
-
 /* Tour section */
-#content .tour-section {
+.tour-section {
   background-color: #000;
   height: 850px;
 }
@@ -198,6 +263,7 @@ html {
 }
 
 .ticket-list li {
+  color: #757575; 
   font-size: 15px;
   padding: 11px 16px;
   border-bottom: 1px solid #ccc;
@@ -224,13 +290,9 @@ html {
 
 /* Place */
 .place-list {
-  margin: 32px -8px 0;
-}
-
-.place-item {
-  float: left;
-  width: calc(100% / 3);
-  padding: 0 8px;
+  margin-top: 32px;
+  margin-bottom: 48px;
+  
 }
 
 .place-img {
@@ -245,7 +307,7 @@ html {
 .place-body {
   background-color: #fff;
   padding: 16px;
-  font-size: 15px;
+  font-size: 15px;    
 }
 
 .place-heading {
@@ -264,15 +326,167 @@ html {
   line-height: 1.4;
 }
 
-.place-buy-btn {
-    color: #fff;
-    background-color: #000;
-    text-decoration: none;
-    padding: 11px 16px;
-    display: inline-block;
-    margin-top: 15px;
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0 , 0 , 0 , 0.4);
+  align-items: center;
+  justify-content: center ;
+  display: none;
+}
+
+.modal-container {
+    background-color: #fff;
+    width: 900px;
+    min-height: 200px;
+    max-width: calc(100% - 32px);
+    position: relative;
+    animation: modalFadeIn ease 0.5s ;
+}
+
+header.modal-header {
+  background-color: #009688;
+  height: 130px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: #fff;
+}
+
+.modal-heading-icon {
+  padding-right: 16px;
+}
+
+.modal-close:hover {
+  opacity: 1;
+}
+
+.modal-close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #fff;
+  padding: 12px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.modal-body {
+  padding: 16px;
+}
+
+.modal-label {
+  display: block;
+  font-size: 15px;
+  margin-bottom: 12px;
+}
+
+.modal-input {
+  border: 1px solid #ccc ;
+  width: 100%;
+  padding: 10px;
+  font-size: 15px;
+  margin-bottom: 24px;
+}
+
+#buy-tickets {
+  background-color: #009688;
+  border: none;
+  color: #fff;
+  width: 100%;
+  font-size: 15px;
+  text-transform: uppercase;
+  padding: 18px;
+  cursor: pointer;
+}
+
+#buy-tickets:hover {
+  opacity: 0.9;
+}
+
+.modal-footer {
+  padding: 16px;
+  text-align: right ;
+  
+}
+
+.modal-footer a {
+  color: #3296f3;
+}
+
+.modal.open {
+  display: flex;
+}
+
+@keyframes modalFadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-140px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Contact from */
+.contact-content {
+  margin-top: 48px;
+}
+
+.contact-info {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.contact-info i[class*="ti-"] {
+  width: 30px;
+  display: inline-block;
+}
+
+.contact-form {
+  font-size: 15px;
+}
+
+.contact-form .form-control {
+  padding: 10px;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+
+.map-section img {
+  width: 100%;
 }
 
 /* Footer section */
-#footer {
+.footer {
+  padding: 64px 16px;
+  text-align: center;
+}
+
+.footer .socical-list {
+  font-size: 24px;
+}
+
+.footer .copyright {
+  font-size: 15px;
+  margin-top: 15px;
+}
+
+.footer .socical-list a {
+  color: rgba(0 , 0 , 0 , 0.6);
+  text-decoration: none;
+}
+
+.footer .copyright a:hover ,
+.footer .socical-list a:hover {
+  color: rgba(0 , 0 , 0 , 0.4);
+}
+
+.footer .copyright a {
+  color: rgba(0 , 0 , 0 , 0.6);
 }
